Update travis and Dockerrun file

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,17 @@ after_success:
   - docker push rvettom/multi-nginx
   - docker push rvettom/multi-server
   - docker push rvettom/multi-worker 
-
+deploy:
+   provider: elasticbeanstalk
+   region: "us-east-1"
+   app: "docker-react"
+   env: "DockerMulti-env"
+   bucket_name: "elasticbeanstalk-us-east-1-803130306783"
+   bucket_path: "docker-react"
+   on:
+     branch: master
+   access_key_id: 
+     secure: "$AWS_ACCESS_KEY"
+   secret_access_key:
+     secure: "$AWS_SECRET_KEY"
+~                               
