updated travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ after_success:
 deploy:
    provider: elasticbeanstalk
    region: "us-east-1"
-   app: "docker-react"
-   env: "DockerMulti-env"
+   app: "Docker-Learning"
+   env: "DockerLearning-env-1"
    bucket_name: "elasticbeanstalk-us-east-1-803130306783"
-   bucket_path: "docker-react"
+   bucket_path: "DockerLearning-env-1"
    on:
      branch: master
    access_key_id: 
